# ADMM

./: .gitignore  README.md  main_mpc.py  pyproject.toml  requirements.txt
ADMM/: example1_admm_pushing.py
Contact_Dynamics/: admm_qp_box.py  admm_qp_circle.py  admm_qp_final.py  admm_qp_planar.py  admm_sdf.py  admm_sdf_final.py  admm_sdf_planar.py  contact_qp.py  contact_qp_planar.py  contact_qp_vertical.py  contact_qp_xy.py  contact_qp_xy2.py  contact_qs_xy.py  contact_quasistatic_planar.py  contact_sdf.py  contact_sdf_planar.py
config/: base_config.yaml  config_clutter.yaml  config_clutter_mjx.yaml  config_corridor.yaml  config_corridor_mjx.yaml  config_gate.yaml  config_gate_mjx.yaml
src/admm/: __init__.py  admm_solver.py  consensus_spaces.py  object_subproblem.py  robot_subproblem.py
src/contact/: __init__.py  resolution.py  wrench_map.py
src/dynamics/: __init__.py  analytical_engine.py  base_dynamics.py  mjx_engine.py  mjx_scene.py  object_2d.py  obstacles.py  physics_engine.py  robot_2d.py
src/geometry/: __init__.py  analytical_2d.py  base_sdf.py
src/mppi/: __init__.py  mppi_core.py  sampler.py
src/utils/: __init__.py  config.py  environments.py  math_utils.py  visualization.py
tests/: test_environments.py  test_horizon_shift.py  test_mjx_engine.py  test_mppi_smoke.py  test_robot_coupling.py  test_sdf_gradients.py  test_wrench_consensus.py  test_wrench_map.py
